<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="TcoAbbRobotics_Config_v_1_x_x" Id="{56710dec-3679-0057-0877-f1de0cbea9ba}">
    <Declaration><![CDATA[TYPE
    TcoAbbRobotics_Config_v_1_x_x :
    STRUCT
        InfoTime : TIME := T#2S;
        ErrorTime : TIME := T#0S;
		IpAddress : STRING;
    END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>